[build-system]
requires = ["setuptools ~= 58.0"]

[project]
name = "StockUtils"
authors = [
    {name = "John Doe", email = "john@doe.com"},
]
description = "My package description"
readme = ""
requires-python = ">=3.7"

dependencies = [
    'importlib-metadata; python_version<"3.8"',
]

dynamic = ["version"]